ralph: iteration 11 — 2026-04-12 11:21:31